--- a/Components/LokatyTabela/LokataItemNaglowek.xaml
+++ b/Components/LokatyTabela/LokataItemNaglowek.xaml
@@ -6,16 +6,17 @@
              xmlns:local="clr-namespace:Bank2.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal">
-        <TextBlock Text="Id"/>
-        <TextBlock Text="KlientImie"/>
-        <TextBlock Text="KlientNazwisko"/>
-        <TextBlock Text="Rodzaj lokaty "/>
+    <StackPanel Orientation="Horizontal"  Background="Gray" >
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="x" Width="15"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Id" Width="30"/>
+        <TextBlock Style="{DynamicResource TextBlockNaglowekDefaultStyle}"  Text="KlientImie" Width="200"/>
+        <TextBlock Style="{DynamicResource TextBlockNaglowekDefaultStyle}"  Text="KlientNazwisko" Width="200"/>
+        <TextBlock Style="{DynamicResource TextBlockNaglowekDefaultStyle}"  Text="Rodzaj lokaty " Width="200"/>
 
-        <TextBlock Text="Kwota lokaty"/>
-        <TextBlock Text="ImiePracownika"/>
-        <TextBlock Text="NazwiskoPracownika"/>
-        <TextBlock Text="Data założenia"/>
-        <TextBlock Text="Oprocentowanie"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Kwota lokaty" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="ImiePracownika" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="NazwiskoPracownika" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Data założenia" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Oprocentowanie" Width="200"/>
     </StackPanel>
 </UserControl>
