--- a/Components/LokatyTabela/LokataItem.xaml
+++ b/Components/LokatyTabela/LokataItem.xaml
@@ -6,18 +6,18 @@
              xmlns:local="clr-namespace:Bank2.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal">
-        <CheckBox IsChecked="{Binding IsSelected}"/>
-        <TextBlock Text="{Binding Id_Lokaty}"/>
-        <TextBlock Text="{Binding KlientImie}"/>
-        <TextBlock Text="{Binding KlientNazwisko}"/>
-        <TextBlock Text="{Binding Rodzaj_lokaty }"/>
+    <StackPanel Orientation="Horizontal"  Background="LightGray" >
+        <CheckBox Background="LightGray"   IsChecked="{Binding IsSelected}" Width="15"/>
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding Id_Lokaty}" Width="30"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding KlientImie}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding KlientNazwisko}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Rodzaj_lokaty }" Width="200"/>
 
-        <TextBlock Text="{Binding Kwota_lokaty}"/>
-        <TextBlock Text="{Binding ImiePracownika}"/>
-        <TextBlock Text="{Binding NazwiskoPracownika}"/>
-        <TextBlock Text="{Binding Data_założenia}"/>
-        <TextBlock Text="{Binding Oprocentowanie}"/>
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding Kwota_lokaty}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding ImiePracownika}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding NazwiskoPracownika}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Data_założenia}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Oprocentowanie}" Width="200"/>
     </StackPanel>
     
 </UserControl>
