--- a/Components/PrzelewyTabela/PrzelewItem.xaml
+++ b/Components/PrzelewyTabela/PrzelewItem.xaml
@@ -4,17 +4,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Bank2.Components"
+             xmlns:components ="clr-namespace:Bank2.Components"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal">
-        <CheckBox IsChecked="{Binding IsSelected}"/>
-        <TextBlock Text="{Binding Id_Przelewu}"/>
-        <TextBlock Text="{Binding NadawcaImię}"/>
-        <TextBlock Text="{Binding NadawcaNazwisko}"/>
-        <TextBlock Text="{Binding Nazwa_odbiorcy}"/>
-        <TextBlock Text="{Binding Tytuł_przelewu}"/>
-        <TextBlock Text="{Binding Kwota}"/>
-        <TextBlock Text="{Binding Data}"/>
-        <TextBlock Text="{Binding Numer_rachunku_odbiorcy}"/>
+
+            >
+
+    <StackPanel Orientation="Horizontal"  Background="LightGray" >
+        <CheckBox  IsChecked="{Binding IsSelected}" Width="15" />
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding Id_Przelewu}" Width="30"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding NadawcaImię}" Width="200" />
+
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding NadawcaNazwisko}" Width="200"/>
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding Nazwa_odbiorcy}" Width="200"/>
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding Tytuł_przelewu}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Kwota}" Width="150"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Data}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Numer_rachunku_odbiorcy}" Width="auto"/>
     </StackPanel>
 </UserControl>
