--- a/Components/RodzajeKredytowTabela/RodzajKredytuItem.xaml
+++ b/Components/RodzajeKredytowTabela/RodzajKredytuItem.xaml
@@ -6,15 +6,15 @@
              xmlns:local="clr-namespace:Bank2.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal">
-        <CheckBox IsChecked="{Binding IsSelected}"/>
-        <TextBlock Text="{Binding Id_rodzaju_Kredytu}"/>
-        <TextBlock Text="{Binding Nazwa }"/>
-        <TextBlock Text="{Binding Oprocentowanie}"/>
-        <TextBlock Text="{Binding Okres_kredytowania_w_mies}"/>
-        <TextBlock Text="{Binding Prowizja }"/>
-        <TextBlock Text="{Binding UtworzylImie }"/>
-        <TextBlock Text="{Binding UtworzylNazwisko}"/>
+    <StackPanel Orientation="Horizontal" Background="LightGray">
+        <CheckBox Background="LightGray" IsChecked="{Binding IsSelected}" Width="15"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Id_rodzaju_Kredytu}" Width="30"/>
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding Nazwa }"/>
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding Oprocentowanie}"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Okres_kredytowania_w_mies}"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Prowizja }"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding UtworzylImie }"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding UtworzylNazwisko}"/>
         
     </StackPanel>
 </UserControl>
