--- a/Components/RodzajeLokatTabela/RodzajLokatyItem.xaml
+++ b/Components/RodzajeLokatTabela/RodzajLokatyItem.xaml
@@ -6,15 +6,15 @@
              xmlns:local="clr-namespace:Bank2.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal">
-        <CheckBox IsChecked="{Binding IsSelected}"/>
-        <TextBlock Text="{Binding Id_rodzaju_Lokaty}"/>
-        <TextBlock Text="{Binding Nazwa }"/>
-        <TextBlock Text="{Binding Oprocentowanie}"/>
-        <TextBlock Text="{Binding Okres_w_mies}"/>
-        <TextBlock Text="{Binding Prowizja }"/>
-        <TextBlock Text="{Binding UtworzylImie }"/>
-        <TextBlock Text="{Binding UtworzylNazwisko}"/>
+    <StackPanel Orientation="Horizontal" Background="LightGray">
+        <CheckBox Background="LightGray" IsChecked="{Binding IsSelected}" Width="15"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Id_rodzaju_Lokaty}" Width="30"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Nazwa }" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Oprocentowanie}" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding Okres_w_mies}" Width="200"/>
+        <TextBlock Style="{DynamicResource TextBlockItemDefaultStyle}"  Text="{Binding Prowizja }" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding UtworzylImie }" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockItemDefaultStyle}" Text="{Binding UtworzylNazwisko}" Width="200"/>
 
     </StackPanel>
 </UserControl>
