--- a/Components/RodzajeLokatTabela/RodzajLokatyNaglowek.xaml
+++ b/Components/RodzajeLokatTabela/RodzajLokatyNaglowek.xaml
@@ -6,14 +6,15 @@
              xmlns:local="clr-namespace:Bank2.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal">
-        <TextBlock Text="Id"/>
-        <TextBlock Text="Nazwa"/>
-        <TextBlock Text="Oprocentowanie"/>
-        <TextBlock Text="Okres w mies"/>
-        <TextBlock Text="Prowizja"/>
-        <TextBlock Text="Utworzyl"/>
-        <TextBlock Text="Utworzyl"/>
+    <StackPanel Orientation="Horizontal" Background="Gray">
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="x" Width="15"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Id" Width="30"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Nazwa" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Oprocentowanie" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Okres w mies" Width="200"/>
+        <TextBlock Style="{DynamicResource TextBlockNaglowekDefaultStyle}"  Text="Prowizja" Width="200"/>
+        <TextBlock Style="{DynamicResource TextBlockNaglowekDefaultStyle}"  Text="Utworzyl" Width="200"/>
+        <TextBlock  Style="{DynamicResource TextBlockNaglowekDefaultStyle}" Text="Utworzyl" Width="200"/>
 
     </StackPanel>
 </UserControl>
