--- a/View/Windows/DodajKredytWindow.xaml
+++ b/View/Windows/DodajKredytWindow.xaml
@@ -9,58 +9,9 @@
         Title="oknoDodajKredyt" Name="Nameokno_DodajKredyt"   MinHeight="400" MaxHeight="900" Width="800"  
     >
     <Window.Resources>
-        <Style TargetType="TextBox">
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Height" Value="25"/>
+     
 
-        </Style>
-        <Style TargetType="PasswordBox">
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Height" Value="25"/>
-
-        </Style>
-        <Style TargetType="Label" >
-            <Setter Property="Width" Value="100" />
-            <Setter Property="Height" Value="40" />
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-
-            <Setter Property="FontSize" Value="20"/>
-        </Style>
-        <Style TargetType="Button" >
-
-            <Setter Property="FontSize" Value="20"/>
-
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Width" Value="100" />
-            <Setter Property="Height" Value="30" />
-
-        </Style>
-
-        <Style TargetType="DataGrid">
-
-
-
-            <Setter Property="Height" Value="auto"/>
-            <Setter Property="IsReadOnly" Value="True"/>
-            <Setter Property="Background" Value="LightGray"/>
-            <Setter Property="RowBackground" Value="LightYellow"/>
-            <Setter Property="AlternatingRowBackground" Value="LightBlue"/>
-            <Setter Property="CanUserAddRows" Value="False"/>
-            <Setter Property="SelectionMode" Value="Single"/>
-            <Setter Property="SelectionUnit" Value="Cell"/>
-            <Setter Property="AutoGenerateColumns" Value="False"/>
-
-            <Setter Property="CanUserResizeColumns" Value="False"/>
-            <Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="HorizontalContentAlignment" Value="Center"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
-            <Setter Property="ColumnWidth" Value="120*"/>
-
-            <Setter Property="CanUserResizeRows" Value="False"/>
-        </Style>
+      
         <Style TargetType="ColumnDefinition" >
 
 
@@ -95,27 +46,31 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50*"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="50*"/>
             <RowDefinition Height="50*"/>
         </Grid.RowDefinitions>
 
 
 
-        <Label x:Name="DodawanieKredytu" Content="Dodawanie kredytu" Width="300" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" />
+        <Label Style="{DynamicResource LabelDefaultStyle}" x:Name="DodawanieKredytu" Content="Dodawanie kredytu" Width="300" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" />
 
-        <Label x:Name="KwotaKredytu" Content="Kwota kredytu" Grid.Column="0" Grid.Row="1" Width="200"/>
-        <TextBox Text="{Binding Kwota, Mode=TwoWay}" x:Name="textBoxKwotaKredytu"  Grid.Column="1" Grid.Row="1"  Width="200" Margin="0,10,10,0" HorizontalAlignment="Left"/>
-        <Label Content="Wybierz klienta"  Width="300"  Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2"  HorizontalAlignment="Left"/>
+        <Label  Style="{DynamicResource LabelDefaultStyle}"  x:Name="KwotaKredytu" Content="Kwota kredytu" Grid.Column="0" Grid.Row="1" Width="200"/>
+        <TextBox   Style="{DynamicResource TextBoxDefaultStyle}" Text="{Binding Kwota, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" x:Name="textBoxKwotaKredytu"  Grid.Column="1" Grid.Row="1"  Width="200"  HorizontalAlignment="Left"/>
+        <Label  Style="{DynamicResource LabelDefaultStyle}" Content="Wybierz klienta"  Width="300"  Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2"  HorizontalAlignment="Left"/>
 
-      
-        <UserControl Content="{Binding TablicaDanych, Mode=TwoWay, NotifyOnTargetUpdated=True}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5"/>
-     
-        <Label Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="5" Width="300" HorizontalAlignment="Left" Content="Wybierz rodzaj kredytu"/>
-        
-        <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5"/>
-      
-        <Button x:Name="dodaj" Content="dodaj" Command="{Binding Dodaj}" Grid.Column="2" Grid.Row="2" Width="75" HorizontalAlignment="Right"  Margin="0,0,10,0" />
-        <Button x:Name="anuluj" Content="anuluj" Command="{Binding Anuluj}" Grid.Column="3" Grid.Row="2" Width="75" HorizontalAlignment="Left" Margin="0,0,20,0" />
+        <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5" Grid.RowSpan="2">
+        <ScrollViewer   VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto"  >
+
+            <UserControl Content="{Binding TablicaDanych, Mode=TwoWay, NotifyOnTargetUpdated=True}" />
+        </ScrollViewer>
+        <Label  Style="{DynamicResource LabelDefaultStyle}"  Width="300" HorizontalAlignment="Left" Content="Wybierz rodzaj kredytu"/>
+            <ScrollViewer   VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto" >
+
+                <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay, NotifyOnTargetUpdated=True}" />
+</ScrollViewer>
+        </StackPanel>
+        <Button  Style="{DynamicResource ButtonDefaultStyle}" x:Name="dodaj" Content="dodaj" Command="{Binding Dodaj}"  IsEnabled="{Binding ErrorFree, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="2" Width="75" HorizontalAlignment="Right"   />
+        <Button  Style="{DynamicResource ButtonDefaultStyle}" x:Name="anuluj" Content="anuluj" Command="{Binding Anuluj}" Grid.Column="3" Grid.Row="2" Width="75" HorizontalAlignment="Left"  />
 
     </Grid>
 
