--- a/View/Windows/EdytujKredytWindow.xaml
+++ b/View/Windows/EdytujKredytWindow.xaml
@@ -93,7 +93,7 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50*"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="50*"/>
             <RowDefinition Height="50*"/>
         </Grid.RowDefinitions>
 
@@ -105,12 +105,18 @@
         <TextBox x:Name="textBoxKwotaKredytu" Text="{Binding Kwota, Mode=TwoWay}" Width="200" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" />
 
         <Label Content="Wybierz Klienta" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="5"  Width="800" />
+        <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5" Grid.RowSpan="2">
+            <ScrollViewer   VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto"  >
 
-        <UserControl Content="{Binding TablicaDanych, Mode=TwoWay, NotifyOnTargetUpdated=True}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5"/>
-        <Label Content="Wybierz kredyt" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="5"  Width="800" />
-      
-        <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5"/>
-        <Button x:Name="edytuj" Command="{Binding Edytuj}" Content="Edytuj" Grid.Column="2" Grid.Row="1" HorizontalAlignment="right" />
+                <UserControl Content="{Binding TablicaDanych, Mode=TwoWay, NotifyOnTargetUpdated=True}" />
+       </ScrollViewer>
+                <Label Content="Wybierz kredyt" Width="800" />
+            <ScrollViewer   VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto" >
+
+                <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay}"/>
+            </ScrollViewer>
+        </StackPanel>
+        <Button x:Name="edytuj" Command="{Binding Edytuj}"  IsEnabled="{Binding ErrorFree, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  Content="Edytuj" Grid.Column="2" Grid.Row="1" HorizontalAlignment="right" />
         <Button x:Name="anuluj" Command="{Binding Anuluj}" Content="anuluj" Grid.Column="3" Grid.Row="1" HorizontalAlignment="center" />
 
     </Grid>
