--- a/View/Windows/ZrobPrzelewWindow.xaml
+++ b/View/Windows/ZrobPrzelewWindow.xaml
@@ -8,33 +8,7 @@
         mc:Ignorable="d"
           Title="oknoDodajPrzelew" Name="NameOknoDodajPrzelew" Height="auto" MinHeight="400" Width="800"  >
     <Window.Resources>
-        <Style TargetType="TextBox">
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Height" Value="25"/>
-
-        </Style>
-        <Style TargetType="PasswordBox">
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Height" Value="25"/>
-
-        </Style>
-        <Style TargetType="Label" >
-            <Setter Property="Width" Value="200" />
-            <Setter Property="Height" Value="40" />
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="FontSize" Value="20"/>
-        </Style>
-        <Style TargetType="Button" >
-
-            <Setter Property="FontSize" Value="20"/>
-
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Width" Value="100" />
-            <Setter Property="Height" Value="30" />
-
-        </Style>
+       
 
         <Style TargetType="DataGrid">
 
@@ -98,30 +72,30 @@
         </Grid.RowDefinitions>
 
 
-        <Label x:Name="KwotaPrzelwu" Content="Przeprowadzanie przelewu" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Width="300" FontWeight="Bold" />
+        <Label Style="{DynamicResource LabelDefaultStyle}" x:Name="KwotaPrzelwu" Content="Przeprowadzanie przelewu" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" HorizontalContentAlignment="Center" HorizontalAlignment="Center"  FontWeight="Bold" />
 
 
-        <Label x:Name="NazwaOdbiorcy" Content="Nazwa Odbiorcy" Grid.Column="0" Grid.Row="1"  />
+        <Label Style="{DynamicResource LabelDefaultStyle}"  x:Name="NazwaOdbiorcy" Content="Nazwa Odbiorcy" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" />
 
-        <Label x:Name="RachunekOdbiorcy" Content="Rachunek Odbiorcy" Grid.Column="0" Grid.Row="2" />
-        <Label x:Name="KwotaPrzelewu" Content="Kwota przelewu" Grid.Column="0" Grid.Row="3"/>
-        <Label x:Name="Tytulem" Content="Tytulem" Grid.Column="0" Grid.Row="4"/>
+        <Label Style="{DynamicResource LabelDefaultStyle}"  x:Name="RachunekOdbiorcy" Content="Rachunek Odbiorcy" Grid.Column="0" Grid.Row="2"  HorizontalAlignment="Left" />
+        <Label Style="{DynamicResource LabelDefaultStyle}"  x:Name="KwotaPrzelewu" Content="Kwota przelewu" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" />
+        <Label Style="{DynamicResource LabelDefaultStyle}"  x:Name="Tytulem" Content="Tytulem" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" />
 
 
 
-        <TextBox x:Name="textBoxKwotaPrzelewu" Text="{Binding Kwota, Mode=TwoWay}" Grid.Column="1" Grid.Row="3"   TextWrapping="Wrap"  />
-        <TextBox x:Name="textBoxNazwaOdbiorcy" Text="{Binding Odbiorca, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"  TextWrapping="Wrap"     />
-        <TextBox x:Name="TextBoxRachunekOdbiorcy" Text="{Binding RachunekOdbiorcy, Mode=TwoWay}" Grid.Column="1" Grid.Row="2"    />
+        <TextBox Style="{DynamicResource TextBoxDefaultStyle}" x:Name="textBoxKwotaPrzelewu" Text="{Binding Kwota, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Grid.Column="1" Grid.Row="3"   TextWrapping="Wrap"  />
+        <TextBox Style="{DynamicResource TextBoxDefaultStyle}" x:Name="textBoxNazwaOdbiorcy" Text="{Binding Odbiorca, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Grid.Column="1" Grid.Row="1"  TextWrapping="Wrap"     />
+        <TextBox Style="{DynamicResource TextBoxDefaultStyle}" x:Name="TextBoxRachunekOdbiorcy" Text="{Binding RachunekOdbiorcy, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, NotifyOnValidationError =True}" Grid.Column="1" Grid.Row="2"    />
 
-        <TextBox x:Name="textBoxTytulem" Text="{Binding Tytylem, Mode=TwoWay}" Grid.Column="1" Grid.Row="4" TextWrapping="Wrap"     />
+        <TextBox Style="{DynamicResource TextBoxDefaultStyle}" x:Name="textBoxTytulem" Text="{Binding Tytylem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Grid.Column="1" Grid.Row="4" TextWrapping="Wrap"     />
 
-        <Button x:Name="dodaj" Content="przelej" Command="{Binding Przelej}" Grid.Column="2" Grid.Row="4"  HorizontalAlignment="Center" />
-        <Button x:Name="anuluj" Content="anuluj" Command="{Binding Anuluj}" Grid.Column="3" Grid.Row="4"  HorizontalAlignment="Center"  Margin="0,0,10,0"/>
+        <Button Style="{DynamicResource ButtonDefaultStyle}" x:Name="dodaj" Content="przelej" Command="{Binding Przelej}" IsEnabled="{Binding ErrorFree, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.Row="4"  HorizontalAlignment="Center" />
+        <Button Style="{DynamicResource ButtonDefaultStyle}" x:Name="anuluj" Content="anuluj" Command="{Binding Anuluj}" Grid.Column="3" Grid.Row="4"  HorizontalAlignment="Center"  />
 
-        <Label Content="Wybierz klienta"  Width="300"  Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2"  HorizontalAlignment="Left"/>
-       
-        <UserControl Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="6" Content="{Binding TablicaDanych, Mode=TwoWay}" />
-
+        <Label Style="{DynamicResource LabelDefaultStyle}"  Content="Wybierz klienta"    Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2"  HorizontalAlignment="Left"/>
+        <ScrollViewer   VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="6" >
+            <UserControl  Content="{Binding TablicaDanych, Mode=TwoWay}" />
+        </ScrollViewer>
 
 
 
